# nch-cpp-utils

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-emscripten.sh  cmake_install.cmake
include/: GLSDL
include/nch/cpp-utils/: arraylist.h  color.h  file-utils.h  filepath.h  fs-utils.h  log.h  noah-alloc-table.h  noah-simple-cryption.h  shell.h  string-utils.h  timer.h
include/nch/cpp-utils/data/: ArrayList.h  NoahAllocTable.h
include/nch/cpp-utils/fs/: FilePath.cpp  FilePath.h  FileUtils.cpp  FileUtils.h  FsUtils.cpp  FsUtils.h
include/nch/cpp-utils/gfx/: Color.cpp  Color.h
include/nch/cpp-utils/io/: Log.cpp  Log.h  SimpleEncryption.cpp  SimpleEncryption.h
include/nch/cpp-utils/z/data/: ArrayList.h  NoahAllocTable.cpp  NoahAllocTable.h  StringUtils.cpp  StringUtils.h
include/nch/cpp-utils/z/fs/: FilePath.cpp  FilePath.h  FileUtils.cpp  FileUtils.h  FsUtils.cpp  FsUtils.h
include/nch/cpp-utils/z/gfx/: Color.cpp  Color.h
include/nch/cpp-utils/z/io/: AsyncShell.cpp  AsyncShell.h  AsyncShellWorker.cpp  AsyncShellWorker.h  Log.cpp  Log.h  NoahSimpleCryption.cpp  NoahSimpleCryption.h  Shell.cpp  Shell.h  Timer.cpp  Timer.h  TimerInit.cpp  TimerInit.h
include/nch/cpp17-utils/: FsUtils.h
include/nch/cpp17-utils/fs/: FilePath.cpp  FilePath.h  FsUtils.cpp  FsUtils.h
include/nch/ffmpeg-utils/: LICENSE.md  mediaplayer.h  simplemediaplayer.h
include/nch/ffmpeg-utils/media/: AudioUtils.cpp  AudioUtils.h  MediaPlaybackData.h  MediaPlayer.cpp  MediaPlayer.h
include/nch/ffmpeg-utils/z/media/: AudioUtils.cpp  AudioUtils.h  MediaLoader.cpp  MediaLoader.h  MediaPlaybackData.h  MediaPlayer.cpp  MediaPlayer.h  SimpleMediaPlayer.cpp  SimpleMediaPlayer.h
include/nch/json-utils/: json.h
include/nch/json-utils/z/: JSON.cpp  JSON.h
include/nch/math-utils/: box2.h  box3.h  chunkmath.h  consts.h  mat4x4.h  matrixops.h  vec2.h  vec3.h  vec4.h  vectorops.h
include/nch/math-utils/z/: MathConstants.h
include/nch/math-utils/z/ops/: ChunkMath.cpp  ChunkMath.h  MatrixOps.h  VectorOps.h
include/nch/opengl-utils/: Shader.cpp  Shader.h  atlas.h  camera3d.h  geo.h  mesh.h  shader.h  xbo.h
include/nch/opengl-utils/geo/: poly.h  quad.h  tri.h  utils.h  vertex.h
include/nch/opengl-utils/z/: Atlas.cpp  Atlas.h  BufferObj.cpp  BufferObj.h  Camera3D.cpp  Camera3D.h  Draw.cpp  Draw.h  GeoMesh.cpp  GeoMesh.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
include/nch/opengl-utils/z/atlas/: AtlasImage.cpp  AtlasImage.h  MaxRectsBin.cpp  MaxRectsBin.h
include/nch/opengl-utils/z/geo/: GeoUtils.cpp  GeoUtils.h  Poly.cpp  Poly.h  Quad.cpp  Quad.h  Tri.cpp  Tri.h  Vertex.cpp  Vertex.h
include/nch/sdl-utils/: Input.cpp  Input.h  MainLoopDriver.cpp  MainLoopDriver.h  Timer.cpp  Timer.h  input.h  main-loop-driver.h  rect.h  text.h  texture-utils.h  timer.h
include/nch/sdl-utils/debug/: SDLEventDebugger.cpp  SDLEventDebugger.h
include/nch/sdl-utils/gfx/: TexUtils.cpp  TexUtils.h  Text.cpp  Text.h
include/nch/sdl-utils/z/gfx/: FrameBuffer.cpp  FrameBuffer.h  NTexture.cpp  NTexture.h  TexUtils.cpp  TexUtils.h  Text.cpp  Text.h
include/nch/sdl-utils/z/io/: Input.cpp  Input.h  MainLoopDriver.cpp  MainLoopDriver.h  Timer.cpp  Timer.h
include/nch/sqlite3-utils/: SQL_Time.cpp  SQL_Time.h  SQL_Utils.cpp  SQL_Utils.h  SQLite.cpp  SQLite.h
include/nch/xml-utils/: xml.h  xpath.h
include/nch/xml-utils/z/: XML.cpp  XML.h  XPath.cpp  XPath.h
src/: Main.cpp  Tests.cpp  Tests.h
